--- a/app/src/main/res/layout/project_list_item.xml
+++ b/app/src/main/res/layout/project_list_item.xml
@@ -3,7 +3,7 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto">
     <data>
-        <variable name="project" type="com.example.test.mvvmsampleapp.service.model.Project"/>
+        <variable name="project" type="com.example.test.mvvmsampleapp.data.model.Project"/>
         <variable name="callback" type="com.example.test.mvvmsampleapp.view.callback.ProjectClickCallback"/>
     </data>
 
